fixed contrast

--- a/src/index.css
+++ b/src/index.css
@@ -68,14 +68,18 @@ button:hover {
 
 .bookmark-list {
   display: block;
-  color: grey;
+  color: black;
   font-size: 20px;
   margin-bottom: 15px;
 }
 
 a {
   margin-bottom: 5px;
-  color: grey;
+  color: black;
+}
+
+a:hover {
+  color: blue;
 }
 
 .error-container {
